--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="author" content="Michael D Henderson" />
+    <meta name="description" content="server"/>
+    <link rel="stylesheet" href="/styles/normalizer-v8.0.1.css"/>
+    <link rel="stylesheet" href="/styles/daleri-mega-v1.2.css" media="screen,projection"/>
     <title>Server</title>
 </head>
 <body>
-<p>This Space For Rent</p>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
 </body>
 </html>
