created static front end

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="author" content="Michael D Henderson" />
-    <meta name="description" content="server"/>
-    <link rel="stylesheet" href="/styles/normalizer-v8.0.1.css"/>
-    <link rel="stylesheet" href="/styles/daleri-mega-v1.2.css" media="screen,projection"/>
-    <title>Server</title>
+	<meta charset='utf-8'>
+	<meta name='viewport' content='width=device-width,initial-scale=1'>
+	<title>Gas Giant Battles</title>
+	<link rel="stylesheet" type="text/css" href="/styles/normalizer-v8.0.1.css" />
+	<link rel="stylesheet" type="text/css" href="/styles/daleri-mega-v1.2.css" title="Daleri Mega" media="screen,projection" />
 </head>
+
 <body>
-<noscript>You need to enable JavaScript to run this app.</noscript>
-<div id="root"></div>
+<div id="top">
+	<p id="skiplinks">Skip to: <a href="#content">content</a> | <a href="#sidebar">sidebar</a></p>
+	<div id="sitetitle">
+		<h1><a href="#">Gas Giant Battles v0.0.0</a></h1>
+		<p>The client for the server...</p>
+	</div>
+	<hr class="clear" />
+</div>
+
+<div id="wrap">
+	<div id="mainmenu">
+		<dl class="nav">
+			<dt><a href="#">Main pages</a></dt>
+			<dd><a href="#">Blog</a></dd>
+			<dd><a href="#">Forums</a></dd>
+			<dd><a href="#">Archives</a></dd>
+		</dl>
+			<dl class="nav">
+			<dt><a href="#">Games</a></dt>
+			<dd><a href="#">Rules</a></dd>
+			<dd><a href="#">Tournaments</a></dd>
+			<dd><a href="#">Archives</a></dd>
+		</dl>
+		<dl class="nav">
+			<dt><a href="#">Extras</a></dt>
+			<dd><a href="#">Music archive</a></dd>
+			<dd><a href="#">Photo gallery</a></dd>
+			<dd><a href="#">Poems and lyrics</a></dd>
+		</dl>
+		<dl class="nav">
+			<dt><a href="#">Community</a></dt>
+			<dd><a href="#">Guestbook</a></dd>
+			<dd><a href="#">Members</a></dd>
+			<dd><a href="#">Link collection</a></dd>
+		</dl>
+		<dl class="introduction">
+			<dt><a href="#">System Status</a></dt>
+			<dd>5x5</dd>
+		</dl>
+		<hr class="clear" />
+	</div>
+
+	<div id="content">
+		<h2><a href="#">Introducing: Gas Giant Battles</a></h2>
+		<p class="introtext">Gas Giant Battles is a strategic, turn-based game of conquest and accounting.</p>
+
+		<p>
+			Players begin the game in control of one star-system.
+			Lectus nulla at volutpat diam ut venenatis tellus in.
+			Accumsan tortor posuere ac ut.
+			Accumsan tortor posuere ac ut consequat semper viverra nam.
+			Feugiat nisl pretium fusce id velit ut tortor pretium viverra.
+		</p>
+		<p>
+			Lorem donec massa sapien faucibus et molestie ac feugiat sed.
+			Duis convallis convallis tellus id.
+			Viverra nibh cras pulvinar mattis nunc sed blandit.
+		</p>
+		<p>
+			Eu non diam phasellus vestibulum lorem sed risus ultricies tristique.
+			Et tortor consequat id porta nibh.
+			Gravida quis blandit turpis cursus in hac habitasse platea.
+			Sed ullamcorper morbi tincidunt ornare massa eget.
+		</p>
+		<p>
+			Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet.
+			Fusce id velit ut tortor.
+		</p>
+		<p>Read more...</p>
+
+		<div class="trio1">
+			<h3><a href="#">Support the development</a></h3>
+			<p>If you want to support the development of this game, there are plenty of opportunities.</p>
+			<ul>
+				<li>Coding</li>
+				<li>Testing</li>
+				<li>Documenting</li>
+				<li>Spreading the word</li>
+			</ul>
+			<p>Read more...</p>
+		</div>
+		
+		<div class="trio2">
+			<h3><a href="#">How to join</a></h3>
+			<p>
+				Libero volutpat sed cras ornare arcu dui.
+				Accumsan lacus vel facilisis volutpat.
+			</p>
+			<p>
+				Sit amet risus nullam eget felis eget nunc.
+				Scelerisque eleifend donec pretium vulputate sapien nec.
+				Placerat duis ultricies lacus sed turpis tincidunt id aliquet.
+			</p>
+			<p>
+				In ornare quam viverra orci sagittis eu volutpat.
+				Pellentesque habitant morbi tristique senectus et netus et.
+			</p>
+			<p>Read more...</p>
+		</div>
+
+		<div class="trio3">
+			<h3><a href="#">Customization</a></h3>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua.
+				Egestas sed sed risus pretium quam.
+				Ut aliquam purus sit amet luctus.
+			</p>
+			<p>
+				Pellentesque habitant morbi tristique senectus et netus et malesuada.
+				Integer quis auctor elit sed vulputate mi sit amet.
+				Duis ultricies lacus sed turpis tincidunt id aliquet risus.
+				Ut morbi tincidunt augue interdum velit euismod in pellentesque massa.
+				A cras semper auctor neque vitae tempus quam.
+			</p>
+			<p>Read more...</p>
+		</div>
+		<hr class="clear" />
+	</div>
+
+		<div id="sidebar">
+		<h2>Eleifend pretium</h2>
+		<p>
+			Tellus id interdum velit laoreet id.
+			Commodo quis  tincidunt nunc pulvinar sapien et ligula.
+		</p>
+
+		<div class="left">
+			<h2>Left menu</h2>
+			<ul class="sidemenu">
+				<li><a href="#">First page</a></li>
+				<li><a href="#">Second page</a></li>
+				<li><a href="#">Third page with subs</a>
+					<ul>
+						<li><a href="#">First subpage</a></li>
+						<li><a href="#">Second subpage</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Fourth page</a></li>
+			</ul>
+
+			<h2>Imperdiet Massa</h2>
+			<p>
+				Dolor sed viverra ipsum nunc aliquet bibendum enim facilisis gravida.
+				Facilisis mauris sit amet massa vitae tortor condimentum lacinia.
+			</p>
+		</div>
+
+		<div class="right">
+			<h2>Right menu</h2>
+			<ul class="sidemenu">
+				<li><a href="#">Sixth page</a></li>
+				<li><a href="#">Seventh page</a></li>
+				<li><a href="#">Another page</a></li>
+				<li><a href="#">The last one</a></li>
+			</ul>
+
+			<h2>Sample links</h2>
+			<ul>
+				<li><a href="#">Sample link 1</a></li>
+				<li><a href="#">Sample link 2</a></li>
+				<li><a href="#">Sample link 3</a></li>
+				<li><a href="#">Sample link 4</a></li>
+			</ul>		
+		</div>
+	   <hr class="clear" />
+	</div>
+	<hr class="clear" />
+</div>
+	
+<div id="footer">
+	<div class="left">
+		<p>&copy; 2020 <a href="https://github.com/mdhender/server">Michael D Henderson</a> | Template design by <a href="https://github.com/mdhender/server/VIKLUND.md">Andreas Viklund</a></p>
+	</div>
+	<div class="right textright">
+		<p>Sample footer menu: <a href="#">Link 1</a> | <a href="#">Link 2</a> | <a href="#">Link 3</a></p>
+		<p class="hide"><a href="#top">Return to top</a></p>
+	</div>
+</div>
+
 </body>
 </html>
