static page updates

--- a/public/index.html
+++ b/public/index.html
@@ -137,42 +137,42 @@
 		</p>
 
 		<div class="left">
-			<h2>Left menu</h2>
+			<h2>Games</h2>
 			<ul class="sidemenu">
-				<li><a href="#">First page</a></li>
-				<li><a href="#">Second page</a></li>
-				<li><a href="#">Third page with subs</a>
+				<li><a href="#">My Games</a>
 					<ul>
-						<li><a href="#">First subpage</a></li>
-						<li><a href="#">Second subpage</a></li>
+						<li><a href="#">Game 101</a></li>
+						<li><a href="#">Game 102</a></li>
 					</ul>
 				</li>
-				<li><a href="#">Fourth page</a></li>
+				<li><a href="#">Active Games</a></li>
+				<li><a href="#">Admin Tasks</a></li>
 			</ul>
 
+			<h2>Documentation</h2>
+			<ul>
+				<li><a href="#">Rules</a></li>
+				<li><a href="#">Submitting Orders</a></li>
+				<li><a href="#">Tutorials</a></li>
+				<li><a href="#">Known Issues</a></li>
+			</ul>
+		</div>
+
+		<div class="right">
+			<h2>Game 101</h2>
+			<ul class="sidemenu">
+				<li><a href="#">Overview</a></li>
+				<li><a href="#">Orders</a></li>
+				<li><a href="#">Diplomacy</a></li>
+				<li><a href="#">Systems</a></li>
+				<li><a href="#">Reports</a></li>
+				<li><a href="#">Notes & Todo</a></li>
+			</ul>
 			<h2>Imperdiet Massa</h2>
 			<p>
 				Dolor sed viverra ipsum nunc aliquet bibendum enim facilisis gravida.
 				Facilisis mauris sit amet massa vitae tortor condimentum lacinia.
 			</p>
-		</div>
-
-		<div class="right">
-			<h2>Right menu</h2>
-			<ul class="sidemenu">
-				<li><a href="#">Sixth page</a></li>
-				<li><a href="#">Seventh page</a></li>
-				<li><a href="#">Another page</a></li>
-				<li><a href="#">The last one</a></li>
-			</ul>
-
-			<h2>Sample links</h2>
-			<ul>
-				<li><a href="#">Sample link 1</a></li>
-				<li><a href="#">Sample link 2</a></li>
-				<li><a href="#">Sample link 3</a></li>
-				<li><a href="#">Sample link 4</a></li>
-			</ul>		
 		</div>
 	   <hr class="clear" />
 	</div>
