static page updates

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,9 @@
 		</dl>
 		<dl class="introduction">
 			<dt><a href="#">System Status</a></dt>
-			<dd>5x5</dd>
+			<dd>Game 103 now accepting new players.</dd>
+			<dt><a href="#">News</a></dt>
+			<dd>Usagi's attack on 05.07.13 repelled by Chizu.</dd>
 		</dl>
 		<hr class="clear" />
 	</div>
@@ -141,12 +143,17 @@
 			<ul class="sidemenu">
 				<li><a href="#">My Games</a>
 					<ul>
-						<li><a href="#">Game 101</a></li>
+						<li><a href="#">Game 100</a></li>
 						<li><a href="#">Game 102</a></li>
 					</ul>
 				</li>
 				<li><a href="#">Active Games</a></li>
-				<li><a href="#">Admin Tasks</a></li>
+				<li><a href="#">Administration</a>
+					<ul>
+						<li><a href="#">Create Game</a></li>
+						<li><a href="#">Upgrade Server</a></li>
+					</ul>
+				</li>
 			</ul>
 
 			<h2>Documentation</h2>
@@ -159,14 +166,27 @@
 		</div>
 
 		<div class="right">
-			<h2>Game 101</h2>
+			<h2>Game 100, Turn 13</h2>
 			<ul class="sidemenu">
-				<li><a href="#">Overview</a></li>
+				<li><a href="#">Overview</a>
+					<ul>
+						<li><a href="#">Reports</a></li>
+						<li><a href="#">Systems</a></li>
+						<li><a href="#">Diplomacy</a></li>
+					</ul>
+				</li>
 				<li><a href="#">Orders</a></li>
-				<li><a href="#">Diplomacy</a></li>
-				<li><a href="#">Systems</a></li>
-				<li><a href="#">Reports</a></li>
-				<li><a href="#">Notes & Todo</a></li>
+				<li><a href="#">Units</a>
+					<ul>
+						<li><a href="#">Colonies</a></li>
+						<li><a href="#">Mines</a></li>
+						<li><a href="#">Factories</a></li>
+						<li><a href="#">Ships</a></li>
+						<li><a href="#">Population</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Todo</a></li>
+				<li><a href="#">History</a></li>
 			</ul>
 			<h2>Imperdiet Massa</h2>
 			<p>
